perf: Optimizing performance
Signed-off-by: TangYang <tangyang9464@163.com>